[package]
name = "hive_reader_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hive_reader_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thrift = "0.17"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# 用于与Polars集成
polars = { version = "0.36", features = ["lazy", "temporal", "strings"] }
pyo3-polars = "0.13"

[build-dependencies]
pyo3-build-config = "0.20" 